Clearing cart and updating UI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "ecommerce",
         "routemisr",
-        "shopmart"
+        "shopmart",
+        "XVCJ"
     ]
 }
